# nexa-agents

./: .env.development  Cargo.toml  README.md  build-minimal-metrics.sh  check-api.sh  fix_dependencies.sh  index.html  index.js  install-deps.sh  migrate.js  nexa-workspace.code-workspace  package-lock.json  package.json  package.json.new  rename_files.sh  restart.sh  run-migration.sh  serve.json  start-metrics-service.sh  start-metrics.sh  start-server.js  start.sh  tsconfig.json  vite.config.js  vite.config.js.new  worklog.md
agent-orchestrator/: Cargo.toml
cache/: metrics.json  token_metrics.json
client/: .eslintrc.json  .gitignore  .prettierrc  delete-files.sh  index.html  install-deps.sh  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  index.css  index.js  main.jsx
config/: nexa-config.docs.jsonc  nexa-config.json  settings.json
data/: agents.json  settings.json
data/configs/: llm-pricing.json
docs/: README.md  WORKLOG.md
gpt-uplink/: .gitignore  package-lock.json
metrics-service/: Cargo.toml
metrics-service/src/: main.rs  main_minimal.rs  main_simple.rs
public/: index.html
server/: package-lock.json  package.json  run-metrics.sh  test-metrics.js  worklog.md
server/src/: index.js  server.js
shared/: README.md
shared/constants/: api.js  index.js
shared/types/: index.js  index.ts
src/: App.css  App.js  App.jsx  index.css  index.js  index.jsx  main.jsx  main.rs  store.js
src/agents/: ProjectManagerAgent.js
src/api/: index.js
src/client/: App.jsx
src/components/: Agents.js  (+23 more)
task-management-api/: Cargo.toml
(+297 files in other folders)
