[package]
name = "nexa-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-cors = "0.7.0"
awc = "3.0.0" # HTTP client
futures = "0.3"
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.33.1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
num_cpus = "1.16.0" # Add this for the minimal version
